<resources>
    <string name="app_name">AndroidJavaToKotlin</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text1">Text View 1</string>
    <string name="text2">Text View 2</string>
    <string name="text3">Text View 3</string>
    <string name="basicText">This is a Basic Text</string>
    <string name="settings">Settings</string>
    <string name="hint">Demo Hint</string>
    <string name="xmlButtonHandlerText"> XML Button Handler</string>
    <string name="codeButtonHandlerText">Button handler called in</string>
    <string name="explicitIntentButton">Send Explicit Intent</string>
    <string name="simpleResultReturnText">Result from Simple Return Activity</string>
    <string name="sendResult">Send Result</string>
    <string name="getResult">Get Result</string>
    <string name="menuToast">Toast</string>
    <string name="spinButton">Spinner Button</string>
    <string name="timePickerButton">Pick A Time</string>
    <string name="persistHint">Enter Text To Store</string>
    <string name="persistCheck">Check if Persists</string>
    <string name="submitForPersist">Submit Text</string>
    <string name="button">Button</string>
    <string name="image_view">Image View</string>
    <string name="demo_image_button">Demo Image Button</string>
</resources>