<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BasicViewActivity">

    <TextView
        android:id="@+id/BA_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/basicText"/>

    <EditText
        android:id="@+id/BA_editTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:minHeight="48dp"
        android:autofillHints="Demo Text"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/BA_buttonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button" />

    <ImageView
        android:id="@+id/BA_imageView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/image_view" />

    <ImageButton
        android:id="@+id/BA_imageButtonView"
        android:contentDescription="@string/demo_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"/>
</LinearLayout>